--- a/PrintSort/src/org/unesco/jisis/printsort/PrintSortTopComponent.form
+++ b/PrintSort/src/org/unesco/jisis/printsort/PrintSortTopComponent.form
@@ -243,19 +243,15 @@
                           <Group type="102" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="rdbMfnRange" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="rdbSearchResults" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      </Group>
-                                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="rdbMfns" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="rdbAllMfn" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      </Group>
-                                  </Group>
-                                  <Component id="rdbMarked" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="rdbMfnRange" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="rdbSearchResults" alignment="0" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="rdbMarked" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="rdbMfns" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="rdbAllMfn" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
